Files For Website

--- a/index.html
+++ b/index.html
@@ -43,11 +43,25 @@
 					</ul>
 				</div>
 
+				
+
 				<div class="nav__toggle" id="nav-toggle">
 					<i class="fas fa-bars"></i>
 				</div>
 			</nav>
 		</header>
+
+		<div class="wrapper">
+    <img class="wrapper__img" src="Images/adiksuu.png" alt="">
+    <div class="content">
+        <header>Cookie Consent</header>
+        <p>This website use cookies to ensure you get best experience on our website.</p>
+        <div class="buttons">
+            <button class="item">I understand</button>
+            <a href="https://cookiepedia.co.uk/giving-consent-to-cookies">Learn More</a>
+        </div>
+    </div>
+</div>
 
         <main class="l-main">
 
