Files For Website

--- a/index.html
+++ b/index.html
@@ -71,12 +71,16 @@
             </h1>
         </div>
 		
-		
-		<input type="text" class="searchme" id="TextInp">
-		<button type="button" id="myButton">Submit</button>
+		<div class="inputs">
+		<input type="text" class="searchme" placeholder="Type Server IP..." id="TextInp">
+        <input type="button" name="" value="Search" id="myButton" class="TextInp">
+		<!-- <button type="button" id="myButton">Submit</button> -->
+        </div>
 
         
     </section>
+
+        </main>
 
 	<section class="blog" id="info">
     <div class="title">
