--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				></a>
 			</div>
 
-			<p>&#169; 2022 copyright <span>CodeAdiksuu</span>.</p>
+			<p>&#169; 2022 copyright <span>SeaClipStudio S.A</span>.</p>
 		</footer>
 
 
